--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "transpile": "rm -rf dist/ && npx tsc",
     "build": "npm run transpile",
-    "dev": "npx ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "start": "node ./dist/index.js",
+    "dev": "NODE_ENV=development npx ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "start": "NODE_ENV=production node ./dist/index.js",
     "linting": "eslint --ignore-path .eslintignore './src/**/*.{ts,js}'",
     "lint": "npm run linting -- --fix",
     "format": "prettier --ignore-path .prettierignore --write \"**/*.+(ts|js|json)\""
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
@@ -35,12 +37,14 @@
     "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^2.0.1",
+    "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
