--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -129,4 +129,12 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
