--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,14 +19,14 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noEmit": true,
-    "strict": true,
+    //"strict": true,
     "jsx": "react",
     "lib": ["es6", "dom"],
     //"alwaysStrict": true,
-    "noImplicitAny": true,
+    //"noImplicitAny": true,
     //"noImplicitReturns": true,
     //"noImplicitThis": true,
-    "strictNullChecks": true,
+    //"strictNullChecks": true,
     "isolatedModules": true,
     "resolveJsonModule": true,
     "skipLibCheck": true
