--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,10 @@
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
-  }
+  },
+  "engines": {
+    "node": "16.20.1",
+    "npm": "9.7.2"
+  },
+  "proxy": "http://127.0.0.1:8080"
 }
